@@ -123,4 +123,11 @@ clapply <- function (X, FUN, ...)
 }
 
 
+### pretty p-value formatting
 
+formatPval <- function (pv, eps = 1e-4)
+{
+    format1 <- function (p)
+        format.pval(p, digits = if (p<10*eps) 1 else 2, eps = eps)
+    sapply(pv, format1)
+}
